Changelog for NICOS 2
=====================

Release 2.5.0
-------------

- GUI: the data of a curve displayed in the "Device history" panel can now be
  saved to disk as a plain-text file.

- Added the "activation()" command to query sample activation from the NICOS
  command line using the new FRM-II web-based activation calculator.

Release 2.4.0
-------------

- An experimental report template can now be automatically filled and placed
  in the experiment directory for user convenience.

- TAS: spurion calculations and warnings are now performed in simulation mode,
  use the "tasdevice.spurioncheck" parameter to control this behavior.

- The "appendscan()" command now appends to the actual end of the scan, not
  the theoretical end (which differs if the scan was interrupted).

- Support for reading values from "Memograph" generated web sites.

- GUI: the elog panel should now allow opening attached files with their default
  viewer (like PDF files).

- GUI: the elog panel now has a print functionality.

- Moveable devices now have a default "doWait()" method that checks for
  the status becoming OK.

- GUI: added a panel to view NICOS log files (if available on the client
  machine).

Release 2.3.0
-------------

- NICOS now requires Python 2.6.

- Added a combined interactive command-input and commandline GUI panel.

- The GUI client now writes a logfile so that unhandled exceptions can be
  better diagnosed.

- Added a MultiSwitcher class to move multiple devices together to pre-
  defined positions.

- Added the "nicos-collector" service that can be used to submit information
  from multiple caches to a "supercache".

- Removed the "SetSMSReceivers" command.

Release 2.2.0
-------------

- Updated documentation describing all NICOS services with configuration
  examples.

- Setups now have more control over which commands are available to the user
  because the standard commands are not automatically loaded anymore.  The